PUM-FIX: Resolve weird layout bug

--- a/client/src/components/css/BookPreview.css
+++ b/client/src/components/css/BookPreview.css
@@ -30,7 +30,7 @@ TODO: Adapt styling for smaller screens (for example phones)
 .MetaData-Wrapper {
     text-align: left;
     padding-left: 8px;
-    width: 70%;
+    width: 60%;
     float: right;
     position: relative;
     height: 100%;
